# unkr

./: .gitignore  Cargo.toml  Makefile  README.md  bench  flake.nix  flake2.nix  partials  perf  result  rust-toolchain  rust-toolchain.toml  t
.gitea/workflows/: build.yml
benches/: benchmark.rs
benchmark/: test1  test2  test3
cache-example/: computed
cache-tests/: done
cache/3e89f9ad1cd039d696efcedae53e5997/85fd409223d7adf5f643b2457e85c9e9/: hits  partials
cache/3e89f9ad1cd039d696efcedae53e5997/e4ffdd76ae759042d4b1af34a9cc2a2a/: hits  partials
cache/456d6b490b6015d7458068c9b479b342/65f36f2b5d00231f61d07f1c336f7b8e/: done  partials
cache/5ed9b6e1a0c1496b2377400bae471c2e/85fd409223d7adf5f643b2457e85c9e9/: hits
cache/67375bd47e5aa0f966176ba89a8d9d15/85fd409223d7adf5f643b2457e85c9e9/: hits
cache/6ed2b01e24001f627623ee0dee2289ac/85fd409223d7adf5f643b2457e85c9e9/: done  hits  partials
cache/ad2b85985de7fb300a8ca62fced03bea/6c9bd029abc9676d1dde7e47514a3dc0/: done  hits  partials
cache/bebd01a647f8cb77c133627d465f01ba/85fd409223d7adf5f643b2457e85c9e9/: partials
cache/e53bb849d93533f196d97403ce897333/85fd409223d7adf5f643b2457e85c9e9/: done  hits
cache/ff6b68cd1768d89e921c49fd8f1133fb/6c9bd029abc9676d1dde7e47514a3dc0/: hits
gpu/: Cargo.toml
gpu/src/: lib.rs
panels/: k2  kr3  kr3clear  permuted-kr4  permuted-kr4-2
program/: README.md  chars
shader/: Cargo.toml
shader/src/: atbash_shader.rs  clues_shader.rs  image_shader.rs  lib.rs
src/: asciimorse.rs  atbash.rs  base.rs  brute_force.rs  brute_force_state.rs  cache.rs  caesar.rs  candidates.rs  change_chars.rs  char_utils.rs  colorize.rs  combinator.rs  console.rs  core.rs  cryptors.rs  cut.rs  decrypt.rs  decryptors.rs  dispatcher.rs  encrypt.rs  enigma.rs  fold.rs  fuzzer.rs  gpu.rs  indexcrypt.rs  join.rs  lib.rs  main.rs  mapper.rs  models.rs  parser.rs  permute.rs  reverse.rs  swap.rs  thread_system.rs  transpose.rs  vigenere.rs
src/cryptors/: atbash.rs  caesar.rs  enigma.rs  indexcrypt.rs  minusplus.rs  mod.rs  reverse.rs  swap.rs  vigenere.rs
src/gpu/: fuzz.glsl  mod.rs  run_gpu.rs
tests/: 1  2  3
unkr/: Cargo.toml  build.rs
unkr/cache-tests/63b588d5559f64f89a416e656880b949/27a711f10fa00512ba38ad3608352b37/: done
unkr/src/: base.rs  combinator.rs  console.rs  fuzzer.rs  lib.rs  main.rs  mapper.rs  models.rs  parser.rs
unkr/src/cryptors/: char_utils.rs  cut.rs  permute.rs
unkr/src/gpu/: atbash.rs  fuzz.rs  gpu.rs  mod.rs  shaders.rs
