[package]
name = "unkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
md5 = "0.7.0"
strum = "0.25.0"
strum_macros = "0.25.2"
crossterm = "0.27.0"
crossbeam = "0.8.2"

[dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4.0"

[[bench]]
name = "benchmark"
harness = false
# path = "benches/benchmark.rs"

# [lib]
# name = "unkr"
# path = "src/lib.rs"
