# https://doc.rust-lang.org/cargo/reference/workspaces.html#workspaces
# https://crane.dev/examples/quick-start-workspace.html
[workspace]
members = [ "gpu","unkr"]
resolver = "2"
metadata.crane.name = "unkr"

[workspace.package]
version = "0.1.0"
authors = [""]
description = "Rebalance packages"
documentation = ""
