[workspace]
members = ["shader", "unkr"]
# required by rust-gpu to prevent too agressive feature merging
# resolver needs to be manually set to "2" in virtual manifests and cannot be derived from workspace.edition = "2021"
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_arch, values("spirv"))',
] }

[workspace.package]
version = "0.1.3"
edition = "2021"
description = "A tool to decrypt old school cyphers"
keywords = ["cryptography"]
categories = ["command-line-utilities"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ldicarlo/unkr"

[workspace.dependencies]
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "e97524f6b4816056b3edaa70c3e0e0c656392c05", default-features = false  }
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", rev = "e97524f6b4816056b3edaa70c3e0e0c656392c05", default-features = false }

# Following is copied from rust-gpu workspace cargo.toml and are largely build time optimizations
# Enable incremental by default in release mode.
[profile.release]
incremental = true
# HACK(eddyb) this is the default but without explicitly specifying it, Cargo
# will treat the identical settings in `[profile.release.build-override]` below
# as different sets of `rustc` flags and will not reuse artifacts between them.
codegen-units = 256

# Compile build-dependencies in release mode with the same settings
# as regular dependencies (including the incremental enabled above).
[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 256
