[package]
name = "unkr"
description = "A tool to decrypt old school cyphers"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
keywords = ["cryptography"]
categories = ["command-line-utilities"]
repository = "https://github.com/ldicarlo/unkr"

[dependencies]
csv = "1.3"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
rand = "0.9.0"
md5 = "0.8.0"
strum = "0.27.0"
strum_macros = "0.27.0"
crossterm = "0.29.0"
crossbeam = "0.8.4"
gpu = { path = "../gpu" }

[dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
criterion = { version = "0.7", features = ["html_reports"] }
pretty_assertions = "1.4.0"

[[bench]]
name = "benchmark"
harness = false
# path = "benches/benchmark.rs"

# [lib]
# name = "unkr"
# path = "src/lib.rs"

[build-dependencies]
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu.git" }
