[package]
name = "unkr"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
csv = "1.3"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
rand = "0.9.0"
md5 = "0.8.0"
strum = "0.27.0"
strum_macros = "0.27.0"
crossterm = "0.29.0"
crossbeam = "0.8.4"
# once vulkano 0.34.X releases this git declaration may be replaced
# https://github.com/vulkano-rs/vulkano/pull/2180
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
winit = { version = "0.30.10", features = ["x11"] }
bytemuck = { version = "1.7", features = [
    "derive",
    "extern_crate_std",
    "min_const_generics",
] }

png = "0.18"
# fixed deps
rustc-literal-escaper = "=0.0.4"
cfg-if = "=1.0.1"
hashbrown = "=0.15.4"
rustc-demangle = "=0.1.25"
dlmalloc = "=0.2.9"
libc = "=0.2.174"
r-efi-alloc = "2.1.0"
fortanix-sgx-abi = "=0.5.0"
getopts = "=0.2.23"
unwinding = "=0.2.7"
unicode-width = "=0.2.1"
gimli = "=0.32.0"
# spirv-builder = { workspace = true }
# spirv-std = { workspace = true }

[dev-dependencies]
pprof = { version = "=0.15", features = ["flamegraph", "criterion"] }
criterion = { version = "=0.5", features = ["html_reports"] }
pretty_assertions = "1.4.0"
# spirv-builder = { workspace = true }

[build-dependencies]
spirv-builder = { workspace = true }
# spirv-std = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
# path = "benches/benchmark.rs"

[lints]
workspace = true

# [lib]
# name = "unkr"
# path = "src/lib.rs"

[features]
# Comment the three line bellow if spirv is not installed locally
# MissingRustcCodegenSpirvDylib if missing next line
default = ["use-installed-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
# use-compiled-tools = ["spirv-builder/use-compiled-tools"]


# use this to switch back to glsl shaders
# use-glsl-shader = []
